--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydb
+    volumes:
+      - ./scripts:/app/scripts
     command: ["python", "./scripts/app.py"]
 
   crontab:
@@ -46,4 +48,6 @@ services:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydb
+    volumes:
+      - ./scripts:/app/scripts
     command: ["./run-crontab.sh"]
